@startuml

title __MANIFEST's Class Diagram__\n

  namespace domainapp.application {
    namespace manifest {
      class domainapp.application.manifest.DomainAppAppManifest {
          {static} + BUILDER : Builder
          + DomainAppAppManifest()
      }
    }
  }
  

  namespace domainapp.application {
    namespace manifest {
      class domainapp.application.manifest.DomainAppAppManifestBypassSecurity {
          # overrideAuthMechanism()
      }
    }
  }
  

  namespace domainapp.application {
    namespace manifest {
      class domainapp.application.manifest.DomainAppAppManifestWithFixtures {
          # overrideFixtures()
      }
    }
  }
  

  namespace domainapp.application {
    namespace manifest {
      class domainapp.application.manifest.DomainAppAppManifestWithFixturesBypassSecurity {
          # overrideAuthMechanism()
      }
    }
  }
  

  domainapp.application.manifest.DomainAppAppManifest -up-|> org.apache.isis.applib.AppManifestAbstract2
  domainapp.application.manifest.DomainAppAppManifestBypassSecurity -up-|> domainapp.application.manifest.DomainAppAppManifest
  domainapp.application.manifest.DomainAppAppManifestWithFixtures -up-|> domainapp.application.manifest.DomainAppAppManifest
  domainapp.application.manifest.DomainAppAppManifestWithFixturesBypassSecurity -up-|> domainapp.application.manifest.DomainAppAppManifestWithFixtures


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
